--- a/package.json
+++ b/package.json
@@ -5,3 +5,17 @@
     "telegraf-session-local": "^2.1.1"
   }
 }
+{
+  "name": "my-bot",
+  "version": "1.0.0",
+  "main": "index.js",
+  "dependencies": {
+    "dotenv": "^17.2.1",
+    "telegraf": "^4.16.3",
+    "telegraf-session-local": "^2.1.1"
+  },
+  "scripts": {
+    "start": "node bot_new.js"
+  }
+}
+
