--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 {
   "name": "my-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "bot_new.js",
   "dependencies": {
     "dotenv": "^17.2.1",
     "telegraf": "^4.16.3",
