--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ BOT_TOKEN=8424986651:AAFxTfCIfihqac7FOiXVwxV3ZrjmNOeTqMI
 # Format: CHANNEL_X_USERNAME va CHANNEL_X_LINK
 # X - ketma-ket raqam (1, 2, 3, ...)
 # Faqat username va linkni o'zgartiring, boshqa hech qanday o'zgartirish kiritmang
+RENDER=true
+RENDER_EXTERNAL_URL=https://1rinchimijoz.onrender.com
 
 CHANNEL_1_USERNAME=@HOLYUCSERVIS
 CHANNEL_1_LINK=https://t.me/HOLYUCSERVIS
