--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 BOT_TOKEN=8424986651:AAFxTfCIfihqac7FOiXVwxV3ZrjmNOeTqMI
-RENDER_EXTERNAL_URL=https://1rinchimijoz.onrender.com
-RENDER_SERVICE_NAME=1rinchimijoz
+RENDER_EXTERNAL_URL=https://onerinchimijoz.onrender.com
+RENDER_SERVICE_NAME=onerinchimijoz
 RENDER=true
-PORT=3000
 
 CHANNEL_1_USERNAME=@HOLYUCSERVIS
 CHANNEL_1_LINK=https://t.me/HOLYUCSERVIS
