--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "telegraf": "^4.16.3",
-    "telegraf-session-local": "^2.1.1"
+    "telegraf-session-local": "^2.1.1",
+    "mongoose": "^8.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
