--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ CHANNEL_2_USERNAME=@starschatim
 CHANNEL_2_LINK=https://t.me/starschatim
 
 # Karta ma'lumotlari
-UZCARD_NUMBER=8600 1234 5678 9012
-HUMO_NUMBER=9860 1234 5678 9012
-CARD_OWNER=John Doe
+UZCARD_NUMBER=8600060962291515
+HUMO_NUMBER=6262570002803015
+CARD_OWNER=T/D
 
 # Premium narxlari (1, 3, 6, 12 oy uchun)
 PREMIUM_1_MONTH=43000
