--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@ RENDER_EXTERNAL_URL=https://onerinchimijoz.onrender.com
 RENDER_SERVICE_NAME=onerinchimijoz
 RENDER=true
 
+
+ADMIN_ID1=7990502958
+ADMIN_ID2=5735723011
+
 CHANNEL_1_USERNAME=@HOLYUCSERVIS
 CHANNEL_1_LINK=https://t.me/HOLYUCSERVIS
 
